# shazam-cpp

./: .gitignore  .nixpacks.toml  CMakeLists.txt  README.md  add  addSongs.cpp  app.py  client.h  cmdHandlers.h  dbclient.cpp  fft.h  filter.h  fingerprint.h  models.h  mongo.h  mp3.h  packages.txt  query.cpp  recorder.py  requirements.txt  run_with_libs.sh  shazam  shazam.h  shazamInit.h  spectogram.h  temp.py  utils.cpp  utils.h
.streamlit/: secrets.toml
db/: sqlite.h
header/: client.h  fft.h  filter.h  fingerprint.h  mongo.h  mp3.h  spectogram.h  utils.h
spotify/: downlaoder.h  spotify.cpp  spotify.h  utils.h  youtube.cpp  youtube.h
wav/: wav.cpp  wav.h
